[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LinkMasterX"
version = "1.0.0"
description = "A symbolic link manager with history and revert functionality."
readme = "README.md"
authors = [
    { name = "dedAI", email = "elliott.mitchell10@gmail.com" }
]
license = { text = "MIT" }
homepage = "https://github.com/hawksp/LinkMasterX"
dependencies = [
    "elevate==0.3.12"
]
requires-python = ">=3.7"

[project.scripts]
linkmasterx = "main:main"
